LINK_DIRECTORIES( ${CBLAS_PATH} ${ATLAS_PATH} )

INCLUDE_DIRECTORIES( ${KNUT_SOURCE_DIR}/src
	${KNUT_BINARY_DIR}/src
	${KNUT_SOURCE_DIR}/UMFPACK/AMD/Include
	${KNUT_SOURCE_DIR}/UMFPACK/UMFPACK/Include
	${KNUT_SOURCE_DIR}/UMFPACK/UFconfig
	${KNUT_SOURCE_DIR}/ATLAS/include
	${KNUT_SOURCE_DIR}/laarpack )

ADD_EXECUTABLE( knut main.cpp )

SET(INTERNAL_LIBS knutlib laarpack umfpack amd ${VFGEN_LIBS} mxml)
SET(EXTERNAL_LIBS ${GINAC_LDFLAGS} ${ATLAS_CBLAS} ${ATLAS_ATLAS}
	${CMAKE_DL_LIBS} ${KNUT_FORTRAN_RUNTIME})

IF(APPLE)
  TARGET_LINK_LIBRARIES( knut ${INTERNAL_LIBS} ${EXTERNAL_LIBS} ${COREFOUNDATION_LIBRARY})
ELSE(APPLE)
  IF(WIN32)
    TARGET_LINK_LIBRARIES( knut ${INTERNAL_LIBS} AUX_BLAS ${EXTERNAL_LIBS})
  ELSE(WIN32)
  TARGET_LINK_LIBRARIES( knut ${INTERNAL_LIBS} ${EXTERNAL_LIBS})
  ENDIF(WIN32)
ENDIF(APPLE)

IF( WIN32 )
IF( NOT MSVC )
IF( KNUT_RELEASE )
  SET_TARGET_PROPERTIES( knut PROPERTIES LINK_FLAGS "-Wl,-s" )
ENDIF( KNUT_RELEASE )
ENDIF( NOT MSVC )
ENDIF( WIN32 )

INSTALL( TARGETS knut DESTINATION ${KNUT_BIN_DIR} )
INSTALL( FILES ${KNUT_SOURCE_DIR}/src/knutsys.h
	${KNUT_SOURCE_DIR}/src/pddesys.h
	${KNUT_SOURCE_DIR}/src/matrix.h
	DESTINATION ${KNUT_INCLUDE_DIR})
