LINK_DIRECTORIES( ${CBLAS_PATH} ${ATLAS_PATH} )

INCLUDE_DIRECTORIES( ${KNUT_SOURCE_DIR}/src
	${KNUT_BINARY_DIR}/src
	${KNUT_SOURCE_DIR}/vfgen
	${GINAC_INCLUDE_DIRS}
	${KNUT_SOURCE_DIR}/UMFPACK/AMD/Include
	${KNUT_SOURCE_DIR}/UMFPACK/UMFPACK/Include
	${KNUT_SOURCE_DIR}/UMFPACK/UFconfig
	${KNUT_SOURCE_DIR}/ATLAS/include
	${KNUT_SOURCE_DIR}/laarpack )

ADD_EXECUTABLE( ${CLI_NAME} main.cpp )

SET(INTERNAL_LIBS knutlib laarpack umfpack amd ${VFGEN_LIBS} mxml)
SET(EXTERNAL_LIBS ${GINAC_LDFLAGS} ${BLAS_LIBS}
	${CMAKE_DL_LIBS} ${KNUT_FORTRAN_RUNTIME})

IF(APPLE)
  TARGET_LINK_LIBRARIES( ${CLI_NAME} ${INTERNAL_LIBS} ${EXTERNAL_LIBS} ${COREFOUNDATION_LIBRARY})
ELSE(APPLE)
  IF(WIN32)
    TARGET_LINK_LIBRARIES( ${CLI_NAME} ${INTERNAL_LIBS} AUX_BLAS ${EXTERNAL_LIBS})
  ELSE(WIN32)
  TARGET_LINK_LIBRARIES( ${CLI_NAME} ${INTERNAL_LIBS} ${EXTERNAL_LIBS})
  ENDIF(WIN32)
ENDIF(APPLE)

IF( WIN32 )
IF( NOT MSVC )
IF( KNUT_RELEASE )
  SET_TARGET_PROPERTIES( ${CLI_NAME} PROPERTIES LINK_FLAGS "-Wl,-s" )
ENDIF( KNUT_RELEASE )
ENDIF( NOT MSVC )
ENDIF( WIN32 )

INSTALL( TARGETS ${CLI_NAME} DESTINATION ${KNUT_BIN_DIR} )
INSTALL( FILES ${KNUT_SOURCE_DIR}/src/knutsys.h
	${KNUT_SOURCE_DIR}/src/pddesys.h
	${KNUT_SOURCE_DIR}/src/matrix.h
	${KNUT_SOURCE_DIR}/src/knerror.h
	DESTINATION ${KNUT_INCLUDE_DIR})
