IF(LONGBLAS)
  ADD_DEFINITIONS( -fdefault-integer-8 )
ENDIF(LONGBLAS)

ADD_LIBRARY( laarpack laarpack.f dlamch.f debug.h stat.h )
SET_SOURCE_FILES_PROPERTIES( dlamch.f PROPERTIES COMPILE_FLAGS -ffloat-store)
ADD_LIBRARY( AUX_BLAS xerbla.f )
IF(USE_REFBLAS)
  ADD_LIBRARY( REF_BLAS mindblas.f )
ENDIF(USE_REFBLAS)
