SET(VFGEN_VERSION_MAJOR "2")
SET(VFGEN_VERSION_MINOR "4")
SET(VFGEN_VERSION_PATCH "0")
SET(VFGEN_VERSION
${VFGEN_VERSION_MAJOR}.${VFGEN_VERSION_MINOR}.${VFGEN_VERSION_PATCH})
ADD_DEFINITIONS(-DVERSION="\\\"${VFGEN_VERSION}\\\"")

SET(VFGEN_CPP_SRC_FILES 
	codegen_utils.cpp 
	vf.cpp vfgen.cpp 
	vf_knut.cpp vf_xml.cpp) 

ADD_EXECUTABLE(vfgen-knut ${VFGEN_CPP_SRC_FILES})

INCLUDE_DIRECTORIES(${GINAC_INCLUDE_DIRS} ${MXML_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(vfgen-knut ${GINAC_LDFLAGS} mxml)
INSTALL(TARGETS vfgen-knut DESTINATION ${KNUT_BIN_DIR})
