SET(VFGEN_VERSION_MAJOR "2")
SET(VFGEN_VERSION_MINOR "4")
SET(VFGEN_VERSION_PATCH "0")
SET(VFGEN_VERSION
${VFGEN_VERSION_MAJOR}.${VFGEN_VERSION_MINOR}.${VFGEN_VERSION_PATCH})
ADD_DEFINITIONS(-DVERSION="\\\"${VFGEN_VERSION}\\\"")

SET(VFGEN_CPP_SRC_FILES	codegen_utils.cpp vf.h vf.cpp vfgen.cpp vf_xml.cpp vf_knut.cpp) 

INCLUDE_DIRECTORIES(${GINAC_INCLUDE_DIRS} ${MXML_INCLUDE_DIRS})

ADD_LIBRARY(vfgenlib ${VFGEN_CPP_SRC_FILES})
SET(VFGEN_LIBS vfgenlib CACHE INTERNAL "vfgen lib")

ADD_EXECUTABLE(vfgen-knut vfgen.cpp vf.h)
TARGET_LINK_LIBRARIES(vfgen-knut vfgenlib ${GINAC_LDFLAGS} mxml)

INSTALL(TARGETS vfgen-knut DESTINATION ${KNUT_BIN_DIR})
