LINK_DIRECTORIES( ${CBLAS_PATH} ${ATLAS_PATH} )

INCLUDE_DIRECTORIES( ${PDDE_SOURCE_DIR}/src
	${PDDE_BINARY_DIR}/src
	${PDDE_SOURCE_DIR}/UMFPACK/AMD/Include
	${PDDE_SOURCE_DIR}/UMFPACK/UMFPACK/Include
	${PDDE_SOURCE_DIR}/UMFPACK/UFconfig
	${PDDE_SOURCE_DIR}/ATLAS/include
	${PDDE_SOURCE_DIR}/laarpack )

ADD_EXECUTABLE( pdde main.cpp )


IF(APPLE)
  TARGET_LINK_LIBRARIES( pdde pddelib laarpack umfpack amd ${ATLAS_ATLAS} ${ATLAS_CBLAS} ${CMAKE_DL_LIBS} ${COREFOUNDATION_LIBRARY})
ELSE(APPLE)
  TARGET_LINK_LIBRARIES( pdde pddelib laarpack umfpack amd ${ATLAS_ATLAS} ${ATLAS_CBLAS} ${CMAKE_DL_LIBS})
ENDIF(APPLE)

IF( WIN32 )
IF( NOT MSVC )
IF( PDDE_RELEASE )
  SET_TARGET_PROPERTIES( pdde PROPERTIES LINK_FLAGS "-Wl,-s" )
ENDIF( PDDE_RELEASE )
ENDIF( NOT MSVC )
ENDIF( WIN32 )

INSTALL( TARGETS pdde DESTINATION ${PDDE_BIN_DIR} )
