LINK_DIRECTORIES( ${CBLAS_PATH} ${ATLAS_PATH} )

INCLUDE_DIRECTORIES( ${KNUT_SOURCE_DIR}/src
	${KNUT_BINARY_DIR}/src
	${KNUT_SOURCE_DIR}/UMFPACK/AMD/Include
	${KNUT_SOURCE_DIR}/UMFPACK/UMFPACK/Include
	${KNUT_SOURCE_DIR}/UMFPACK/UFconfig
	${KNUT_SOURCE_DIR}/ATLAS/include
	${KNUT_SOURCE_DIR}/laarpack )

ADD_EXECUTABLE( knut main.cpp )

IF(APPLE)
  TARGET_LINK_LIBRARIES( knut knutlib laarpack umfpack amd mxml 
    ${ATLAS_CBLAS} ${ATLAS_ATLAS} ${CMAKE_DL_LIBS} 
    gfortran ${COREFOUNDATION_LIBRARY})
ELSE(APPLE)
  TARGET_LINK_LIBRARIES( knut knutlib laarpack umfpack amd mxml 
    ${ATLAS_CBLAS} ${ATLAS_ATLAS} ${CMAKE_DL_LIBS} gfortran)
ENDIF(APPLE)

IF( WIN32 )
IF( NOT MSVC )
IF( KNUT_RELEASE )
  SET_TARGET_PROPERTIES( knut PROPERTIES LINK_FLAGS "-Wl,-s" )
ENDIF( KNUT_RELEASE )
ENDIF( NOT MSVC )
ENDIF( WIN32 )

INSTALL( TARGETS knut DESTINATION ${KNUT_BIN_DIR} )
INSTALL( FILES ${KNUT_SOURCE_DIR}/src/knutsys.h ${KNUT_SOURCE_DIR}/src/matrix.h
         DESTINATION ${KNUT_INCLUDE_DIR})
